{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 142,
  "lineage": "f58ae62e-8ce4-d9d7-cf65-f94184e63282",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0857583c1379a5c56",
            "arn": "arn:aws:ec2:ap-northeast-2:396391506937:elastic-ip/eipalloc-0857583c1379a5c56",
            "domain": "vpc",
            "id": "eipalloc-0857583c1379a5c56",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-43-200-195-151.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.200.195.151",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-eip-a"
            },
            "tags_all": {
              "Name": "nat-eip-a"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cba38dcae3ebb12d",
            "arn": "arn:aws:ec2:ap-northeast-2:396391506937:elastic-ip/eipalloc-0cba38dcae3ebb12d",
            "domain": "vpc",
            "id": "eipalloc-0cba38dcae3ebb12d",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-43-201-178-144.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.201.178.144",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-eip-b"
            },
            "tags_all": {
              "Name": "nat-eip-b"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:396391506937:internet-gateway/igw-0311dd23606c38a77",
            "id": "igw-0311dd23606c38a77",
            "owner_id": "396391506937",
            "tags": {
              "Name": "main-igw"
            },
            "tags_all": {
              "Name": "main-igw"
            },
            "vpc_id": "vpc-039c582cb22487a9c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0857583c1379a5c56",
            "association_id": "eipassoc-050467b0fbf88c08d",
            "connectivity_type": "public",
            "id": "nat-034ad4ed280fa9017",
            "network_interface_id": "eni-067c0a6e3fe0dc6b0",
            "private_ip": "10.0.0.198",
            "public_ip": "43.200.195.151",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0034e5d907f9e4a89",
            "tags": {
              "Name": "nat-gateway-a"
            },
            "tags_all": {
              "Name": "nat-gateway-a"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_a",
            "aws_internet_gateway.main",
            "aws_subnet.public_a",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cba38dcae3ebb12d",
            "association_id": "eipassoc-0892774d5b1895806",
            "connectivity_type": "public",
            "id": "nat-09e3a5190c5e97dcf",
            "network_interface_id": "eni-0e92e76e04d6d7291",
            "private_ip": "10.0.100.92",
            "public_ip": "43.201.178.144",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02e726d548d1f7cfe",
            "tags": {
              "Name": "nat-gateway-b"
            },
            "tags_all": {
              "Name": "nat-gateway-b"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_b",
            "aws_internet_gateway.main",
            "aws_subnet.public_b",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_a_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-094666d116c5fb5671080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-034ad4ed280fa9017",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-094666d116c5fb567",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_a",
            "aws_internet_gateway.main",
            "aws_nat_gateway.a",
            "aws_route_table.private_a",
            "aws_subnet.public_a",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_b_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e8485ca1ba8313171080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-09e3a5190c5e97dcf",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e8485ca1ba831317",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_b",
            "aws_internet_gateway.main",
            "aws_nat_gateway.b",
            "aws_route_table.private_b",
            "aws_subnet.public_b",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0311dd23606c38a77",
            "id": "r-rtb-04adc9f5214700b291080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04adc9f5214700b29",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:396391506937:route-table/rtb-094666d116c5fb567",
            "id": "rtb-094666d116c5fb567",
            "owner_id": "396391506937",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-rt-a"
            },
            "tags_all": {
              "Name": "private-rt-a"
            },
            "timeouts": null,
            "vpc_id": "vpc-039c582cb22487a9c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:396391506937:route-table/rtb-0e8485ca1ba831317",
            "id": "rtb-0e8485ca1ba831317",
            "owner_id": "396391506937",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-rt-b"
            },
            "tags_all": {
              "Name": "private-rt-b"
            },
            "timeouts": null,
            "vpc_id": "vpc-039c582cb22487a9c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:396391506937:route-table/rtb-04adc9f5214700b29",
            "id": "rtb-04adc9f5214700b29",
            "owner_id": "396391506937",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-039c582cb22487a9c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00254b1d6eb612339",
            "route_table_id": "rtb-094666d116c5fb567",
            "subnet_id": "subnet-0fd609f1a955352cd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_a",
            "aws_subnet.private_a",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-006848dad84ff3924",
            "route_table_id": "rtb-0e8485ca1ba831317",
            "subnet_id": "subnet-0e68758d5c225fdcc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_b",
            "aws_subnet.private_b",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-059155f82c05d62a8",
            "route_table_id": "rtb-04adc9f5214700b29",
            "subnet_id": "subnet-0034e5d907f9e4a89"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_a",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-076fa0374cb2fded5",
            "route_table_id": "rtb-04adc9f5214700b29",
            "subnet_id": "subnet-02e726d548d1f7cfe"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_b",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:396391506937:security-group/sg-063ef731b83d008f9",
            "description": "Security group for EKS control plane",
            "egress": [],
            "id": "sg-063ef731b83d008f9",
            "ingress": [],
            "name": "lucky-gun-eks-cluster-sg",
            "name_prefix": "",
            "owner_id": "396391506937",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "lucky-gun-eks-cluster-sg",
              "Project": "terraform-eks-study"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "lucky-gun-eks-cluster-sg",
              "Project": "terraform-eks-study"
            },
            "timeouts": null,
            "vpc_id": "vpc-039c582cb22487a9c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:396391506937:security-group/sg-04154bbfc653cd646",
            "description": "Security group for EKS worker nodes",
            "egress": [],
            "id": "sg-04154bbfc653cd646",
            "ingress": [],
            "name": "lucky-gun-eks-node-sg",
            "name_prefix": "",
            "owner_id": "396391506937",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "lucky-gun-eks-node-sg",
              "Project": "terraform-eks-study"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "lucky-gun-eks-node-sg",
              "Project": "terraform-eks-study"
            },
            "timeouts": null,
            "vpc_id": "vpc-039c582cb22487a9c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks_cluster_egress_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "EKS control plane outbound traffic (ALL)",
            "from_port": 0,
            "id": "sgrule-3420011515",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-063ef731b83d008f9",
            "security_group_rule_id": "sgr-0a1c24b2b90be80b4",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks_cluster_ingress_https_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "EKS worker nodes connect to control plane (api server)",
            "from_port": 443,
            "id": "sgrule-1384879884",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-063ef731b83d008f9",
            "security_group_rule_id": "sgr-06c7c8986f1961373",
            "self": false,
            "source_security_group_id": "sg-04154bbfc653cd646",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_security_group.eks_node",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks_node_egress_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "EKS worker nodes outbound traffic (ALL)",
            "from_port": 0,
            "id": "sgrule-4284857344",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-04154bbfc653cd646",
            "security_group_rule_id": "sgr-01f131e552c8af1ea",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks_node",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks_node_ingress_all_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "EKS control plane connect to worker nodes (ALL)",
            "from_port": 0,
            "id": "sgrule-914791797",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-04154bbfc653cd646",
            "security_group_rule_id": "sgr-0357e91cbfede54be",
            "self": false,
            "source_security_group_id": "sg-063ef731b83d008f9",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_security_group.eks_node",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks_node_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "EKS Node communication",
            "from_port": 0,
            "id": "sgrule-2508974313",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-04154bbfc653cd646",
            "security_group_rule_id": "sgr-019807d6ffc5ff91b",
            "self": false,
            "source_security_group_id": "sg-04154bbfc653cd646",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks_node",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:396391506937:subnet/subnet-0fd609f1a955352cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.50.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fd609f1a955352cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "396391506937",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lucky-gun-private-a",
              "Type": "private",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "lucky-gun-private-a",
              "Type": "private",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-039c582cb22487a9c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:396391506937:subnet/subnet-0e68758d5c225fdcc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.150.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e68758d5c225fdcc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "396391506937",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lucky-gun-private-b",
              "Type": "private",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "lucky-gun-private-b",
              "Type": "private",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-039c582cb22487a9c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:396391506937:subnet/subnet-0034e5d907f9e4a89",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0034e5d907f9e4a89",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "396391506937",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lucky-gun-public-a",
              "Type": "public",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "lucky-gun-public-a",
              "Type": "public",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-039c582cb22487a9c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:396391506937:subnet/subnet-02e726d548d1f7cfe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02e726d548d1f7cfe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "396391506937",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lucky-gun-public-b",
              "Type": "public",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "lucky-gun-public-b",
              "Type": "public",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-039c582cb22487a9c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:396391506937:vpc/vpc-039c582cb22487a9c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-082795fb3ecac6594",
            "default_route_table_id": "rtb-0c3521e1de51540ce",
            "default_security_group_id": "sg-011b5a14e148f3932",
            "dhcp_options_id": "dopt-08765f6d3b22e8768",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-039c582cb22487a9c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c3521e1de51540ce",
            "owner_id": "396391506937",
            "tags": {
              "Name": "lucky-gun-vpc"
            },
            "tags_all": {
              "Name": "lucky-gun-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}